--- a/src/Main.mxml
+++ b/src/Main.mxml
@@ -57,6 +57,7 @@
 		<engine:Rettangolo id="ret1">
 			
 		</engine:Rettangolo>
+		<engine:Rettangolo id="ret2" x="300" y="300" width="100" height="50" />
 	</engine:Applicazione>
 
 </s:Application>
