--- a/src/Main.mxml
+++ b/src/Main.mxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
-			   xmlns:s="library://ns.adobe.com/flex/spark" 
-			   xmlns:mx="library://ns.adobe.com/flex/mx" 
-			   xmlns:engine="com.engine.base.*" creationComplete="gestRet()">
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:engine="com.engine.base.*" creationComplete="gestRet()">
 
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
@@ -54,10 +51,9 @@
 		</s:Button>
 	</s:VGroup>
 	<engine:Applicazione id="app" x="100" y="100" width="500" height="400">
-		<engine:Rettangolo id="ret1">
-			
+	<!--	<engine:Rettangolo id="ret1">
 		</engine:Rettangolo>
 		<engine:Rettangolo id="ret2" x="300" y="300" width="100" height="50" />
-	</engine:Applicazione>
+-->	</engine:Applicazione>
 
 </s:Application>
