--- a/src/com/engine/applicazione/GestoreProprieta.mxml
+++ b/src/com/engine/applicazione/GestoreProprieta.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx" creationComplete="inizializzazione()" 
-		 width="400" height="300" title="Proprietà oggetto">
+		 width="400" height="300" title="Proprietà oggetto: {idForma} ({classe})">
 
 	<fx:Declarations>
 
@@ -16,6 +16,7 @@
 		import com.engine.applicazione.Comando;
 		import flash.events.MouseEvent;
 		import flash.ui.Mouse;
+		import flash.utils.getQualifiedClassName;
 		import mx.collections.ArrayCollection;
 		import mx.controls.Button;
 		import mx.controls.TextInput;
@@ -32,11 +33,21 @@
 		public function set forma(forma:IForma):void 
 		{
 			this._forma = forma;
+			this.idForma = _forma.id;
+			this.classe = getQualifiedClassName( _forma);
 			aggiornaProprieta();
 			aggiornaAzioni();
 		};
+		
+		[Bindable]
+		public var idForma:String;
+		[Bindable]
+		public var classe:String;
+		
 		private function inizializzazione():void{
-
+			this.addEventListener(MouseEvent.CLICK, function(e:MouseEvent):void{
+				e.stopImmediatePropagation();
+			});
 		}
 		/**
 		 * aggiorna la datagrid con la lista delle proprietà relative
@@ -120,5 +131,5 @@
 			</s:Group>
 		</s:Scroller>
 
-	<s:VGroup left="10" right="10" height="50" bottom="10" id="vg1"></s:VGroup>
+	<s:TileGroup left="10" right="10" height="50" bottom="10" id="vg1"></s:TileGroup>
 </s:Panel>
