--- a/src/Main.mxml
+++ b/src/Main.mxml
@@ -9,32 +9,41 @@
 	<fx:Script>
 		<![CDATA[
 		import br.com.stimuli.loading.BulkLoader;
+		import br.com.stimuli.loading.BulkProgressEvent;
 		import br.com.stimuli.loading.loadingtypes.LoadingItem;
 		import com.engine.applicazione.Applicazione;
-		import com.engine.base.Forma;
-		import com.engine.base.Rettangolo;
+		import com.engine.base.FormaEvent;
+		import com.engine.componenti.Rettangolo;
 		import com.engine.util.Settings;
 		import flash.display.Bitmap;
 		import flash.events.Event;
 		import flash.filesystem.File;
 		import flash.net.FileFilter;
 		import flash.net.FileReference;
-		import mx.controls.Image;
-		import mx.graphics.SolidColor;
 		import mx.controls.Alert;
-		import spark.primitives.Rect;
+		import mx.controls.Image;
+		import mx.core.IVisualElementContainer;
 		import mx.events.PropertyChangeEvent;
-		import br.com.stimuli.loading.BulkProgressEvent;
-		import com.engine.base.FormaEvent;
+		import mx.graphics.SolidColor;
+		import spark.primitives.Rect;
 		private var loader:BulkLoader = new BulkLoader("main");
-
+		private var app:Applicazione;
 		
 		private function carica():void{
-			var app2:Applicazione = new Applicazione();
+			app = new Applicazione({x:100,y:100});
 			Settings.fileName = "impostazioni.xml";
 			Settings.xmlData = app.forma.proprieta;
-			Settings.readXML();
-			 
+			try 
+			{
+				Settings.readXML();
+				for each (var figlio:XML in Settings.xmlData.children){
+					app.addElement(app.forma.CreaForma(figlio));
+				}
+			}
+			catch (e:Error){
+				Alert.show(e.message);
+			}
+			this.addElement(app);
 		}
 
 		private function salva():void 
@@ -55,7 +64,7 @@
 		<s:Button label="salva" click="salva()"> 
 		</s:Button>
 	</s:VGroup>
-	<app:Applicazione id="app" x="100" y="100" width="800" height="600">
+	<!--<app:Applicazione id="app" x="100" y="100" width="800" height="600">
 	</app:Applicazione>
-	
+	-->
 </s:Application>
